--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First React App</title>
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 </head>
 <body>
-    
+    <div id="app"></div>
+
+    <script>
+        const name = 'Amber';
+        const handle = '@amber.suratte';
+
+        const nameElement = React.createElement(
+            'h1',
+            null,
+            name
+        );
+
+        const handleElement = React.createElement(
+            'h3',
+            null,
+            handle
+        );
+
+        const wrapperElement = React.createElement(
+            'div',
+            {id: 'container'},
+            nameElement, 
+            handleElement
+        );
+
+        ReactDOM.render( 
+            wrapperElement,
+            document.getElementById('app')
+        );
+    </script>
 </body>
 </html>
