--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
     <div id="app"></div>
 
     <script>
-        const name = 'Amber';
-        const handle = '@amber.suratte';
+        function NameComponent(props) {
+            return React.createElement(
+                'h1',
+                null,
+                props.name
+            );
+        }
 
-        const nameElement = React.createElement(
-            'h1',
-            null,
-            name
-        );
-
-        const handleElement = React.createElement(
-            'h3',
-            null,
-            handle
-        );
+        function HandleComponent(props) {
+            return React.createElement(
+                'h3',
+                null,
+                props.handle
+            );
+        }
 
         const wrapperElement = React.createElement(
             'div',
             {id: 'container'},
-            nameElement, 
-            handleElement
+            React.createElement(NameComponent, { name: 'Amber'}), 
+            React.createElement(HandleComponent, { handle: '@amber.suratte'})
         );
 
         ReactDOM.render( 
