--- a/index.html
+++ b/index.html
@@ -7,36 +7,34 @@
     <title>First React App</title>
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
     <div id="app"></div>
 
-    <script>
+    <script type="text/babel">
+        const name = 'Amber';
+        const handle = '@amber.suratte';
+
         function NameComponent(props) {
-            return React.createElement(
-                'h1',
-                null,
-                props.name
-            );
+            return <h1>{props.name}</h1>;
         }
 
         function HandleComponent(props) {
-            return React.createElement(
-                'h3',
-                null,
-                props.handle
+            return <h3>{props.handle}</h3>;
+        }
+
+        function App() {
+            return(
+                <div id="container">
+                    <NameComponent name={name} />
+                    <HandleComponent handle={handle} />
+                </div>
             );
         }
 
-        const wrapperElement = React.createElement(
-            'div',
-            {id: 'container'},
-            React.createElement(NameComponent, { name: 'Amber'}), 
-            React.createElement(HandleComponent, { handle: '@amber.suratte'})
-        );
-
         ReactDOM.render( 
-            wrapperElement,
+            <App />,
             document.getElementById('app')
         );
     </script>
