--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
                     friends: ['Jordyn', 'Mikenzi', 'Jake']
                 }
             }
+
+            handleAddFriend() {
+
+            }
+
+            handleRemoveFriend(name) {
+                this.setState((currentState) => {
+                    return {
+                        friends: currentState.friends.filter((friend) => friend !== name)
+                    }
+                });
+            }
+
             render() {
                 return (
                     <div>
