added button with event handler for removing friends from list

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             return (
                 <ul>
                     {props.list.map((name) => (
-                        <li key={name}>{name}</li>
+                        <li key={name}>
+                            <span>{name}</span>
+                            <button onClick={() => props.onRemoveFriend(name)}>Remove</button>
+                        </li>
                     ))}
                 </ul>
             );
@@ -31,6 +34,7 @@
                 this.state = {
                     friends: ['Jordyn', 'Mikenzi', 'Jake']
                 }
+                this.handleRemoveFriend = this.handleRemoveFriend.bind(this);
             }
 
             handleAddFriend() {
@@ -48,7 +52,10 @@
             render() {
                 return (
                     <div>
-                        <FriendsList list={this.state.friends} />
+                        <FriendsList 
+                            list={this.state.friends} 
+                            onRemoveFriend={this.handleRemoveFriend}
+                        />
                     </div>
                 );
             }
